--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -8,14 +8,16 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Astro blog</title>
 	</head>
 	<body>
      		<a href="/">Inicio</a>
             <a href="/about/">Sobre mi</a>
-			<a href="/blog/">Blog</a>
-
+            <a href="/blog/">Blog</a>
 			<h1>Astro</h1>
 			<h1>Mi sitio Astro</h1>
+            <h1>Blog</h1>
+            <h2>... ¡y mi nuevo sitio Astro de TEST!</h2>
+            <p>Estoy trabajando en el tutorial introductorio de Astro. Esta es la pagina para el blog</p>
 	</body>
 </html>
